# SoftwareTestingVerificationAndValidation

./: Dantu-Test-Execution.sh  Dantu-Test.Error  Dantu-Test.Output  Makefile  Makefile.in  README.md  config.cache  config.h  config.h.in  config.status  configure  configure.in  corncob_lowercase.txt  doc2.txt  doc3.txt  doc4.txt  functionality  functionality_and_test_table.xlsx  getopt.atac  getopt1.atac  sample  spell  spell.atac  spell.c  spell.info  spell.tar  spell.texi  spell.trace  str.atac  str.c  str.h
